@@ -2115,7 +2115,9 @@ The following placeholders are defined:
 The default value is equal to the unchanged user agent of
 QtWebKit/QtWebEngine.
 
-Note that the value read from JavaScript is always the global value.
+Note that the value read from JavaScript is always the global value. With
+QtWebEngine between 5.12 and 5.14 (inclusive), changing the value exposed
+to JavaScript requires a restart.
 
 
 This setting supports URL patterns.
