@@ -94,6 +94,9 @@ Fixed
 - With Qt 5.15, the audible/muted indicators are not updated properly due to a
   Qt bug. This release adds a workaround so that at least the muted indicator
   is shown properly.
+- As a workaround for crashes with QtWebEngine versions between 5.12 and 5.14
+  (inclusive), changing the user agent (`content.headers.user_agent`) exposed
+  to JS now requires a restart. The corresponding HTTP header is not affected.
 
 v1.12.0 (2020-06-01)
 --------------------
